Worked on notebook

--- a/notebooks/titanic_LO1_tim.ipynb
+++ b/notebooks/titanic_LO1_tim.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "3ccdbaa3",
    "metadata": {},
    "outputs": [],
@@ -89,8 +89,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "d5b6a0ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(418, 11)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad5674cc",
+   "metadata": {},
+   "source": [
+    "### What is the number of rows and number of columns?\n",
+    "Number of rows: 418\n",
+    "\n",
+    "Number of columns: 11"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
-   "id": "daceee30",
+   "id": "7e19d6d9",
    "metadata": {},
    "outputs": [
     {
@@ -327,206 +359,91 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "d5b6a0ea",
+   "cell_type": "markdown",
+   "id": "abef947e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(418, 11)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df.shape"
+    "### What does each row in the data represent?\n",
+    "\n",
+    "A passenger on the titanic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f46224f1",
+   "metadata": {},
+   "source": [
+    "### What is the data type of the columns, and what are the units?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "07752cd4",
+   "execution_count": 14,
+   "id": "bf5e8044",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "418"
+       "PassengerId      int64\n",
+       "Pclass           int64\n",
+       "Name            object\n",
+       "Sex             object\n",
+       "Age            float64\n",
+       "SibSp            int64\n",
+       "Parch            int64\n",
+       "Ticket          object\n",
+       "Fare           float64\n",
+       "Cabin           object\n",
+       "Embarked        object\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(df)"
+    "df.dtypes"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "4df0b8a3",
+   "cell_type": "markdown",
+   "id": "dd6418ef",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "len(df.loc[0])"
+    "**Units:**\n",
+    "\n",
+    "PassengerID = Number\n",
+    "\n",
+    "Pclass = ???\n",
+    "\n",
+    "Name = \n",
+    "\n",
+    "Sex = \n",
+    "\n",
+    "Age = Number\n",
+    "\n",
+    "SibSp = \n",
+    "\n",
+    "Parch = \n",
+    "\n",
+    "Ticket = \n",
+    "\n",
+    "Fare = \n",
+    "\n",
+    "Cabin = \n",
+    "\n",
+    "Embarked = "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "7e19d6d9",
+   "cell_type": "markdown",
+   "id": "4958881f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>PassengerId</th>\n",
-       "      <td>892</td>\n",
-       "      <td>893</td>\n",
-       "      <td>894</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Pclass</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Name</th>\n",
-       "      <td>Kelly, Mr. James</td>\n",
-       "      <td>Wilkes, Mrs. James (Ellen Needs)</td>\n",
-       "      <td>Myles, Mr. Thomas Francis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sex</th>\n",
-       "      <td>male</td>\n",
-       "      <td>female</td>\n",
-       "      <td>male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Age</th>\n",
-       "      <td>34.5</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>62.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SibSp</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Parch</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ticket</th>\n",
-       "      <td>330911</td>\n",
-       "      <td>363272</td>\n",
-       "      <td>240276</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Fare</th>\n",
-       "      <td>7.8292</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>9.6875</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Cabin</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Embarked</th>\n",
-       "      <td>Q</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Q</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                            0                                 1  \\\n",
-       "PassengerId               892                               893   \n",
-       "Pclass                      3                                 3   \n",
-       "Name         Kelly, Mr. James  Wilkes, Mrs. James (Ellen Needs)   \n",
-       "Sex                      male                            female   \n",
-       "Age                      34.5                              47.0   \n",
-       "SibSp                       0                                 1   \n",
-       "Parch                       0                                 0   \n",
-       "Ticket                 330911                            363272   \n",
-       "Fare                   7.8292                               7.0   \n",
-       "Cabin                     NaN                               NaN   \n",
-       "Embarked                    Q                                 S   \n",
-       "\n",
-       "                                     2  \n",
-       "PassengerId                        894  \n",
-       "Pclass                               2  \n",
-       "Name         Myles, Mr. Thomas Francis  \n",
-       "Sex                               male  \n",
-       "Age                               62.0  \n",
-       "SibSp                                0  \n",
-       "Parch                                0  \n",
-       "Ticket                          240276  \n",
-       "Fare                            9.6875  \n",
-       "Cabin                              NaN  \n",
-       "Embarked                             Q  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df.head(3).transpose()"
+    "### What is the measurement level of the columns?\n"
    ]
   }
  ],
