--- a/notebooks/titanic_LO1_tim.ipynb
+++ b/notebooks/titanic_LO1_tim.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3ccdbaa3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import libraries\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Create dataframe from dataset\n",
+    "df = pd.read_csv(\"../datasets/test.csv\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d63908a7",
    "metadata": {},
@@ -25,6 +39,20 @@
     "* What will be your activities in each of the CRISP DM phases?\n",
     "    \n",
     "</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "febc5fc1",
+   "metadata": {},
+   "source": [
+    "1. The goal of the competition is to make a prediction about who had the most chance of surviving the sinking of the titanic.\n",
+    "2. What sort of people were more likely to survive the sinking?\n",
+    "3. Any information about the sinking of the titanic. \n",
+    "4. ?\n",
+    "5. Classification or regression.\n",
+    "6. ?\n",
+    "7. https://www.datascience-pm.com/crisp-dm-2/"
    ]
   },
   {
@@ -73,18 +101,6 @@
     "* What is the source of the data, how about confidentiality?\n",
     "* For this competition, what additional information (data sources) would be relevant?\n",
     "</font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "3ccdbaa3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.read_csv(\"../datasets/test.csv\")"
    ]
   },
   {
