--- a/notebooks/titanic_LO1_tim.ipynb
+++ b/notebooks/titanic_LO1_tim.ipynb
@@ -46,6 +46,7 @@
    "id": "febc5fc1",
    "metadata": {},
    "source": [
+    "### 1.1 Answers\n",
     "1. The goal of the competition is to make a prediction about who had the most chance of surviving the sinking of the titanic.\n",
     "2. What sort of people were more likely to survive the sinking?\n",
     "3. Any information about the sinking of the titanic. \n",
