--- a/notebooks/titanic_LO1_tim.ipynb
+++ b/notebooks/titanic_LO1_tim.ipynb
@@ -46,7 +46,7 @@
    "id": "febc5fc1",
    "metadata": {},
    "source": [
-    "### 1.1 Answers\n",
+    "### Indicator 1.1 answers\n",
     "1. The goal of the competition is to make a prediction about who had the most chance of surviving the sinking of the titanic.\n",
     "2. What sort of people were more likely to survive the sinking?\n",
     "3. Any information about the sinking of the titanic. \n",
@@ -80,6 +80,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "adee8ed9",
+   "metadata": {},
+   "source": [
+    "### Indicator 1.2 answers\n",
+    "1. It is my job to predict if a passenger survived the sinking of the Titanic or not. \n",
+    "2. The metric is the accuracy of passengers that are correctly predicted to be dead. \n",
+    "3. ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "482bae00",
    "metadata": {},
    "source": [
@@ -105,292 +116,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "d5b6a0ea",
+   "cell_type": "markdown",
+   "id": "1cb018e8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(418, 11)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df.shape"
+    "### Indicator 1.3 answers\n",
+    "1. 418 rows and 11 columns.\n",
+    "2. A passenger on the titanic."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ad5674cc",
+   "id": "7cd9a4b4",
    "metadata": {},
    "source": [
-    "### What is the number of rows and number of columns?\n",
-    "Number of rows: 418\n",
-    "\n",
-    "Number of columns: 11"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "7e19d6d9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>SibSp</th>\n",
-       "      <th>Parch</th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>Cabin</th>\n",
-       "      <th>Embarked</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>892</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Kelly, Mr. James</td>\n",
-       "      <td>male</td>\n",
-       "      <td>34.5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>330911</td>\n",
-       "      <td>7.8292</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Q</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>893</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Wilkes, Mrs. James (Ellen Needs)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>363272</td>\n",
-       "      <td>7.0000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>894</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Myles, Mr. Thomas Francis</td>\n",
-       "      <td>male</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>240276</td>\n",
-       "      <td>9.6875</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Q</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>895</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Wirz, Mr. Albert</td>\n",
-       "      <td>male</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>315154</td>\n",
-       "      <td>8.6625</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>896</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Hirvonen, Mrs. Alexander (Helga E Lindqvist)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3101298</td>\n",
-       "      <td>12.2875</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>413</th>\n",
-       "      <td>1305</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Spector, Mr. Woolf</td>\n",
-       "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>A.5. 3236</td>\n",
-       "      <td>8.0500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>414</th>\n",
-       "      <td>1306</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Oliva y Ocana, Dona. Fermina</td>\n",
-       "      <td>female</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>PC 17758</td>\n",
-       "      <td>108.9000</td>\n",
-       "      <td>C105</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>415</th>\n",
-       "      <td>1307</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Saether, Mr. Simon Sivertsen</td>\n",
-       "      <td>male</td>\n",
-       "      <td>38.5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>SOTON/O.Q. 3101262</td>\n",
-       "      <td>7.2500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>416</th>\n",
-       "      <td>1308</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Ware, Mr. Frederick</td>\n",
-       "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>359309</td>\n",
-       "      <td>8.0500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>417</th>\n",
-       "      <td>1309</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Peter, Master. Michael J</td>\n",
-       "      <td>male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2668</td>\n",
-       "      <td>22.3583</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>418 rows × 11 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     PassengerId  Pclass                                          Name  \\\n",
-       "0            892       3                              Kelly, Mr. James   \n",
-       "1            893       3              Wilkes, Mrs. James (Ellen Needs)   \n",
-       "2            894       2                     Myles, Mr. Thomas Francis   \n",
-       "3            895       3                              Wirz, Mr. Albert   \n",
-       "4            896       3  Hirvonen, Mrs. Alexander (Helga E Lindqvist)   \n",
-       "..           ...     ...                                           ...   \n",
-       "413         1305       3                            Spector, Mr. Woolf   \n",
-       "414         1306       1                  Oliva y Ocana, Dona. Fermina   \n",
-       "415         1307       3                  Saether, Mr. Simon Sivertsen   \n",
-       "416         1308       3                           Ware, Mr. Frederick   \n",
-       "417         1309       3                      Peter, Master. Michael J   \n",
-       "\n",
-       "        Sex   Age  SibSp  Parch              Ticket      Fare Cabin Embarked  \n",
-       "0      male  34.5      0      0              330911    7.8292   NaN        Q  \n",
-       "1    female  47.0      1      0              363272    7.0000   NaN        S  \n",
-       "2      male  62.0      0      0              240276    9.6875   NaN        Q  \n",
-       "3      male  27.0      0      0              315154    8.6625   NaN        S  \n",
-       "4    female  22.0      1      1             3101298   12.2875   NaN        S  \n",
-       "..      ...   ...    ...    ...                 ...       ...   ...      ...  \n",
-       "413    male   NaN      0      0           A.5. 3236    8.0500   NaN        S  \n",
-       "414  female  39.0      0      0            PC 17758  108.9000  C105        C  \n",
-       "415    male  38.5      0      0  SOTON/O.Q. 3101262    7.2500   NaN        S  \n",
-       "416    male   NaN      0      0              359309    8.0500   NaN        S  \n",
-       "417    male   NaN      1      1                2668   22.3583   NaN        C  \n",
-       "\n",
-       "[418 rows x 11 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "abef947e",
-   "metadata": {},
-   "source": [
-    "### What does each row in the data represent?\n",
-    "\n",
-    "A passenger on the titanic"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f46224f1",
-   "metadata": {},
-   "source": [
-    "### What is the data type of the columns, and what are the units?"
+    "3. "
    ]
   },
   {
@@ -427,40 +167,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd6418ef",
+   "id": "51d41ab2",
    "metadata": {},
    "source": [
-    "**Units:**\n",
-    "\n",
-    "PassengerID = Number\n",
-    "\n",
-    "Pclass = ???\n",
-    "\n",
-    "Name = \n",
-    "\n",
-    "Sex = \n",
-    "\n",
-    "Age = Number\n",
-    "\n",
-    "SibSp = \n",
-    "\n",
-    "Parch = \n",
-    "\n",
-    "Ticket = \n",
-    "\n",
-    "Fare = \n",
-    "\n",
-    "Cabin = \n",
-    "\n",
-    "Embarked = "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4958881f",
-   "metadata": {},
-   "source": [
-    "### What is the measurement level of the columns?\n"
+    "4. ?\n",
+    "5. Kaggle or archives.\n",
+    "6. Cabin locations, deck location to name a few"
    ]
   }
  ],
