--- a/notebooks/titanic_LO1_tim.ipynb
+++ b/notebooks/titanic_LO1_tim.ipynb
@@ -172,7 +172,7 @@
    "source": [
     "4. ?\n",
     "5. Kaggle or archives.\n",
-    "6. Cabin locations, deck location to name a few"
+    "6. Cabin locations, deck location to name a few."
    ]
   }
  ],
