--- a/notebooks/titanic_LO2_tim.ipynb
+++ b/notebooks/titanic_LO2_tim.ipynb
@@ -237,6 +237,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ae0d475d",
+   "metadata": {},
+   "source": [
+    "3. There seems to be a lot of missing data that could be useful to use to make more accurate predictions. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6ff2444c",
    "metadata": {},
    "source": [
@@ -251,6 +259,14 @@
     "<font color='red'>\n",
     "What would be needed to merge additional data sources?\n",
     "</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b39b3da",
+   "metadata": {},
+   "source": [
+    "1. A column to merge the datasets on."
    ]
   },
   {
@@ -279,12 +295,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a2d3e94a",
+   "cell_type": "markdown",
+   "id": "181ebeeb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Indicator 2.3 answers\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -310,11 +326,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "94a96bba",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df[\"family_size\"] = df[\"SibSp\"] + df[\"Parch\"]\n",
+    "\n",
+    "df.to_csv(\"../datasets/test2.csv\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -335,39 +355,6 @@
     "* Discuss the type of model that you need\n",
     "* Calculate a simple benchmark: look at the most common outcome (Survived) for Sex=female and Sex=male. Based on that, create predictions for the test set and upload your first submission\n",
     "</font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "daceee30",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'Survived'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_8752/821014261.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSex\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;34m'female'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSurvived\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5485\u001b[0m         ):\n\u001b[0;32m   5486\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5487\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5488\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5489\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'Survived'"
-     ]
-    }
-   ],
-   "source": [
-    "df[df.Sex=='female'].Survived.value_counts().sort_index().plot.bar()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e7f2cbd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[df.Sex=='male'].Survived.value_counts().sort_index().plot.bar()"
    ]
   }
  ],
