Made a benchmark submission

--- a/notebooks/titanic_LO2_tim.ipynb
+++ b/notebooks/titanic_LO2_tim.ipynb
@@ -331,9 +331,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create family_size column. Adding the SibSp and Parch column togetherz\n",
     "df[\"family_size\"] = df[\"SibSp\"] + df[\"Parch\"]\n",
     "\n",
-    "df.to_csv(\"../datasets/test2.csv\")"
+    "# Extract two properties from the Cabin column\n",
+    "# Extract the amount of cabins someone has on his/her name\n",
+    "df.loc[df['Cabin'].notna(), 'cabin_amount'] = [len(row) for row in df.loc[df['Cabin'].notna(), 'Cabin'].str.split(' ')]\n",
+    "\n",
+    "# Extract the deck letter from the full cabin name\n",
+    "df.loc[df['Cabin'].notna(), 'cabin_deck'] = [row[-1][0] for row in df.loc[df['Cabin'].notna(), 'Cabin'].str.split(' ')]\n",
+    "\n",
+    "# Extract the cabin numbers from the cabin names\n",
+    "df.loc[df['Cabin'].notna(), 'cabin_number'] = [','.join([number[1:] for number in row]) for row in df.loc[df['Cabin'].notna(), 'Cabin'].str.split(' ')]\n",
+    "\n",
+    "#\n",
+    "df[\"Survived\"] = df[\"Sex\"].map({\"female\" : 1, \"male\" : 0})\n",
+    "\n",
+    "# One-hot-encoding\n",
+    "\n",
+    "\n",
+    "df.to_csv(\"../datasets/test2.csv\", index = False)"
    ]
   },
   {
@@ -356,6 +373,220 @@
     "* Calculate a simple benchmark: look at the most common outcome (Survived) for Sex=female and Sex=male. Based on that, create predictions for the test set and upload your first submission\n",
     "</font>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6dcc551c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>family_size</th>\n",
+       "      <th>cabin_amount</th>\n",
+       "      <th>Survived</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>PassengerId</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.026751</td>\n",
+       "      <td>-0.034102</td>\n",
+       "      <td>0.003818</td>\n",
+       "      <td>0.043080</td>\n",
+       "      <td>0.008211</td>\n",
+       "      <td>0.030087</td>\n",
+       "      <td>-0.128647</td>\n",
+       "      <td>-0.023245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pclass</th>\n",
+       "      <td>-0.026751</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.492143</td>\n",
+       "      <td>0.001087</td>\n",
+       "      <td>0.018721</td>\n",
+       "      <td>-0.577147</td>\n",
+       "      <td>0.012736</td>\n",
+       "      <td>0.050987</td>\n",
+       "      <td>-0.108615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age</th>\n",
+       "      <td>-0.034102</td>\n",
+       "      <td>-0.492143</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.091587</td>\n",
+       "      <td>-0.061249</td>\n",
+       "      <td>0.337932</td>\n",
+       "      <td>-0.093632</td>\n",
+       "      <td>0.101826</td>\n",
+       "      <td>-0.000013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SibSp</th>\n",
+       "      <td>0.003818</td>\n",
+       "      <td>0.001087</td>\n",
+       "      <td>-0.091587</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.306895</td>\n",
+       "      <td>0.171539</td>\n",
+       "      <td>0.788610</td>\n",
+       "      <td>0.236895</td>\n",
+       "      <td>0.099943</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Parch</th>\n",
+       "      <td>0.043080</td>\n",
+       "      <td>0.018721</td>\n",
+       "      <td>-0.061249</td>\n",
+       "      <td>0.306895</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.230046</td>\n",
+       "      <td>0.827242</td>\n",
+       "      <td>0.547856</td>\n",
+       "      <td>0.159120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fare</th>\n",
+       "      <td>0.008211</td>\n",
+       "      <td>-0.577147</td>\n",
+       "      <td>0.337932</td>\n",
+       "      <td>0.171539</td>\n",
+       "      <td>0.230046</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.249924</td>\n",
+       "      <td>0.568137</td>\n",
+       "      <td>0.191514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>family_size</th>\n",
+       "      <td>0.030087</td>\n",
+       "      <td>0.012736</td>\n",
+       "      <td>-0.093632</td>\n",
+       "      <td>0.788610</td>\n",
+       "      <td>0.827242</td>\n",
+       "      <td>0.249924</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.517608</td>\n",
+       "      <td>0.161803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cabin_amount</th>\n",
+       "      <td>-0.128647</td>\n",
+       "      <td>0.050987</td>\n",
+       "      <td>0.101826</td>\n",
+       "      <td>0.236895</td>\n",
+       "      <td>0.547856</td>\n",
+       "      <td>0.568137</td>\n",
+       "      <td>0.517608</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.001718</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Survived</th>\n",
+       "      <td>-0.023245</td>\n",
+       "      <td>-0.108615</td>\n",
+       "      <td>-0.000013</td>\n",
+       "      <td>0.099943</td>\n",
+       "      <td>0.159120</td>\n",
+       "      <td>0.191514</td>\n",
+       "      <td>0.161803</td>\n",
+       "      <td>-0.001718</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              PassengerId    Pclass       Age     SibSp     Parch      Fare  \\\n",
+       "PassengerId      1.000000 -0.026751 -0.034102  0.003818  0.043080  0.008211   \n",
+       "Pclass          -0.026751  1.000000 -0.492143  0.001087  0.018721 -0.577147   \n",
+       "Age             -0.034102 -0.492143  1.000000 -0.091587 -0.061249  0.337932   \n",
+       "SibSp            0.003818  0.001087 -0.091587  1.000000  0.306895  0.171539   \n",
+       "Parch            0.043080  0.018721 -0.061249  0.306895  1.000000  0.230046   \n",
+       "Fare             0.008211 -0.577147  0.337932  0.171539  0.230046  1.000000   \n",
+       "family_size      0.030087  0.012736 -0.093632  0.788610  0.827242  0.249924   \n",
+       "cabin_amount    -0.128647  0.050987  0.101826  0.236895  0.547856  0.568137   \n",
+       "Survived        -0.023245 -0.108615 -0.000013  0.099943  0.159120  0.191514   \n",
+       "\n",
+       "              family_size  cabin_amount  Survived  \n",
+       "PassengerId      0.030087     -0.128647 -0.023245  \n",
+       "Pclass           0.012736      0.050987 -0.108615  \n",
+       "Age             -0.093632      0.101826 -0.000013  \n",
+       "SibSp            0.788610      0.236895  0.099943  \n",
+       "Parch            0.827242      0.547856  0.159120  \n",
+       "Fare             0.249924      0.568137  0.191514  \n",
+       "family_size      1.000000      0.517608  0.161803  \n",
+       "cabin_amount     0.517608      1.000000 -0.001718  \n",
+       "Survived         0.161803     -0.001718  1.000000  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"../datasets/test2.csv\")\n",
+    "\n",
+    "df.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bd0b376f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your submission was successfully saved!\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = pd.DataFrame({'PassengerId': df.PassengerId, 'Survived': df.Survived})\n",
+    "output.to_csv('submission.csv', index=False)\n",
+    "print(\"Your submission was successfully saved!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15420a9a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
