Add gridserch notebook

--- a/notebooks/titanic_LO2_tim.ipynb
+++ b/notebooks/titanic_LO2_tim.ipynb
@@ -10,6 +10,7 @@
     "# import libraries\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "COLOR = 'white'\n",
     "plt.rcParams['text.color'] = COLOR\n",
@@ -348,7 +349,7 @@
     "df[\"Survived\"] = df[\"Sex\"].map({\"female\" : 1, \"male\" : 0})\n",
     "\n",
     "# One-hot-encoding\n",
-    "\n",
+    "df = pd.get_dummies(df,columns=['Embarked'])\n",
     "\n",
     "df.to_csv(\"../datasets/test2.csv\", index = False)"
    ]
@@ -410,6 +411,9 @@
        "      <th>family_size</th>\n",
        "      <th>cabin_amount</th>\n",
        "      <th>Survived</th>\n",
+       "      <th>Embarked_C</th>\n",
+       "      <th>Embarked_Q</th>\n",
+       "      <th>Embarked_S</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -424,6 +428,9 @@
        "      <td>0.030087</td>\n",
        "      <td>-0.128647</td>\n",
        "      <td>-0.023245</td>\n",
+       "      <td>-0.027419</td>\n",
+       "      <td>-0.035731</td>\n",
+       "      <td>0.048008</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Pclass</th>\n",
@@ -436,6 +443,9 @@
        "      <td>0.012736</td>\n",
        "      <td>0.050987</td>\n",
        "      <td>-0.108615</td>\n",
+       "      <td>-0.318543</td>\n",
+       "      <td>0.252608</td>\n",
+       "      <td>0.120783</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Age</th>\n",
@@ -448,6 +458,9 @@
        "      <td>-0.093632</td>\n",
        "      <td>0.101826</td>\n",
        "      <td>-0.000013</td>\n",
+       "      <td>0.180601</td>\n",
+       "      <td>-0.017956</td>\n",
+       "      <td>-0.158295</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SibSp</th>\n",
@@ -460,6 +473,9 @@
        "      <td>0.788610</td>\n",
        "      <td>0.236895</td>\n",
        "      <td>0.099943</td>\n",
+       "      <td>-0.016365</td>\n",
+       "      <td>-0.098824</td>\n",
+       "      <td>0.079367</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Parch</th>\n",
@@ -472,6 +488,9 @@
        "      <td>0.827242</td>\n",
        "      <td>0.547856</td>\n",
        "      <td>0.159120</td>\n",
+       "      <td>-0.005791</td>\n",
+       "      <td>-0.132948</td>\n",
+       "      <td>0.092201</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Fare</th>\n",
@@ -484,6 +503,9 @@
        "      <td>0.249924</td>\n",
        "      <td>0.568137</td>\n",
        "      <td>0.191514</td>\n",
+       "      <td>0.312161</td>\n",
+       "      <td>-0.155562</td>\n",
+       "      <td>-0.178582</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>family_size</th>\n",
@@ -496,6 +518,9 @@
        "      <td>1.000000</td>\n",
        "      <td>0.517608</td>\n",
        "      <td>0.161803</td>\n",
+       "      <td>-0.013402</td>\n",
+       "      <td>-0.144233</td>\n",
+       "      <td>0.106421</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>cabin_amount</th>\n",
@@ -508,6 +533,9 @@
        "      <td>0.517608</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>-0.001718</td>\n",
+       "      <td>0.077171</td>\n",
+       "      <td>-0.044480</td>\n",
+       "      <td>-0.068001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Survived</th>\n",
@@ -519,6 +547,54 @@
        "      <td>0.191514</td>\n",
        "      <td>0.161803</td>\n",
        "      <td>-0.001718</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.033684</td>\n",
+       "      <td>0.115574</td>\n",
+       "      <td>-0.105883</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Embarked_C</th>\n",
+       "      <td>-0.027419</td>\n",
+       "      <td>-0.318543</td>\n",
+       "      <td>0.180601</td>\n",
+       "      <td>-0.016365</td>\n",
+       "      <td>-0.005791</td>\n",
+       "      <td>0.312161</td>\n",
+       "      <td>-0.013402</td>\n",
+       "      <td>0.077171</td>\n",
+       "      <td>0.033684</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.199786</td>\n",
+       "      <td>-0.767375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Embarked_Q</th>\n",
+       "      <td>-0.035731</td>\n",
+       "      <td>0.252608</td>\n",
+       "      <td>-0.017956</td>\n",
+       "      <td>-0.098824</td>\n",
+       "      <td>-0.132948</td>\n",
+       "      <td>-0.155562</td>\n",
+       "      <td>-0.144233</td>\n",
+       "      <td>-0.044480</td>\n",
+       "      <td>0.115574</td>\n",
+       "      <td>-0.199786</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.474962</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Embarked_S</th>\n",
+       "      <td>0.048008</td>\n",
+       "      <td>0.120783</td>\n",
+       "      <td>-0.158295</td>\n",
+       "      <td>0.079367</td>\n",
+       "      <td>0.092201</td>\n",
+       "      <td>-0.178582</td>\n",
+       "      <td>0.106421</td>\n",
+       "      <td>-0.068001</td>\n",
+       "      <td>-0.105883</td>\n",
+       "      <td>-0.767375</td>\n",
+       "      <td>-0.474962</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -536,17 +612,37 @@
        "family_size      0.030087  0.012736 -0.093632  0.788610  0.827242  0.249924   \n",
        "cabin_amount    -0.128647  0.050987  0.101826  0.236895  0.547856  0.568137   \n",
        "Survived        -0.023245 -0.108615 -0.000013  0.099943  0.159120  0.191514   \n",
+       "Embarked_C      -0.027419 -0.318543  0.180601 -0.016365 -0.005791  0.312161   \n",
+       "Embarked_Q      -0.035731  0.252608 -0.017956 -0.098824 -0.132948 -0.155562   \n",
+       "Embarked_S       0.048008  0.120783 -0.158295  0.079367  0.092201 -0.178582   \n",
        "\n",
-       "              family_size  cabin_amount  Survived  \n",
-       "PassengerId      0.030087     -0.128647 -0.023245  \n",
-       "Pclass           0.012736      0.050987 -0.108615  \n",
-       "Age             -0.093632      0.101826 -0.000013  \n",
-       "SibSp            0.788610      0.236895  0.099943  \n",
-       "Parch            0.827242      0.547856  0.159120  \n",
-       "Fare             0.249924      0.568137  0.191514  \n",
-       "family_size      1.000000      0.517608  0.161803  \n",
-       "cabin_amount     0.517608      1.000000 -0.001718  \n",
-       "Survived         0.161803     -0.001718  1.000000  "
+       "              family_size  cabin_amount  Survived  Embarked_C  Embarked_Q  \\\n",
+       "PassengerId      0.030087     -0.128647 -0.023245   -0.027419   -0.035731   \n",
+       "Pclass           0.012736      0.050987 -0.108615   -0.318543    0.252608   \n",
+       "Age             -0.093632      0.101826 -0.000013    0.180601   -0.017956   \n",
+       "SibSp            0.788610      0.236895  0.099943   -0.016365   -0.098824   \n",
+       "Parch            0.827242      0.547856  0.159120   -0.005791   -0.132948   \n",
+       "Fare             0.249924      0.568137  0.191514    0.312161   -0.155562   \n",
+       "family_size      1.000000      0.517608  0.161803   -0.013402   -0.144233   \n",
+       "cabin_amount     0.517608      1.000000 -0.001718    0.077171   -0.044480   \n",
+       "Survived         0.161803     -0.001718  1.000000    0.033684    0.115574   \n",
+       "Embarked_C      -0.013402      0.077171  0.033684    1.000000   -0.199786   \n",
+       "Embarked_Q      -0.144233     -0.044480  0.115574   -0.199786    1.000000   \n",
+       "Embarked_S       0.106421     -0.068001 -0.105883   -0.767375   -0.474962   \n",
+       "\n",
+       "              Embarked_S  \n",
+       "PassengerId     0.048008  \n",
+       "Pclass          0.120783  \n",
+       "Age            -0.158295  \n",
+       "SibSp           0.079367  \n",
+       "Parch           0.092201  \n",
+       "Fare           -0.178582  \n",
+       "family_size     0.106421  \n",
+       "cabin_amount   -0.068001  \n",
+       "Survived       -0.105883  \n",
+       "Embarked_C     -0.767375  \n",
+       "Embarked_Q     -0.474962  \n",
+       "Embarked_S      1.000000  "
       ]
      },
      "execution_count": 6,
@@ -562,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "bd0b376f",
    "metadata": {},
    "outputs": [
@@ -576,17 +672,9 @@
    ],
    "source": [
     "output = pd.DataFrame({'PassengerId': df.PassengerId, 'Survived': df.Survived})\n",
-    "output.to_csv('submission.csv', index=False)\n",
+    "output.to_csv('../datasets/submission.csv', index=False)\n",
     "print(\"Your submission was successfully saved!\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15420a9a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
